Building Services/scss/style.scss
@import "keyframes-mixins";

$menu-size: 675px;
$tile-size: 32%;
$tile-border: 25px;
$section-bg: #FFEDB3;
$tile-bg: #90CEF2;

* {
  margin: 0;
  padding: 0;
}

#container {
  @include display(100vh,flex);
  justify-content: center;
  align-items: center;
  overflow: hidden;
  @include smartphone {
    align-items: flex-start;
  }

  header {
    position: relative;
    @include smartphone {
      width: 100%;
    }

    img.dec {
      position: absolute;
      @include smartphone {
        display: none;
      }
    }

    img.builder {
      bottom: -20%;
      right: -31%;
      width: 55%;
    }

    img.arrow {
      top: $tile-size/2;
      left: -21%;
      width: 20%;
    }
  }
}

nav {
  width: $menu-size;
  height: $menu-size;
  @include mobile-size-nav(575px, 575px, 630px, 730px, 930px, 1100px, 0.8rem);
  // @include mobile-size-wnav(475px, 475px, 770px, 929px, 0.7rem);
  @include mobile-size-nav(475px, 475px, 530px, 629px, 768px, 929px, 0.7rem);
  @include mobile-size-nav(375px, 375px, 430px, 529px, 0, 0, 0.5rem);
  // @include mobile-size-wnav(275px, 275px, 450px, 609px, 0.4rem);
  // @include mobile-size-nav(300px, 300px, 330px, 429px, 450px, 609px, 0.4rem);
  @include mobile-size-nav(300px, 300px, 0px, 429px, 0, 0, 0.3rem);
  // @include mobile-size-hnav(575px, 575px, 630px, 730px, 0.8rem);
  // // @include mobile-size-hnav(475px, 475px, 530px, 629px, 0.7rem);
  // @include mobile-size-hnav(375px, 375px, 430px, 629px, 0.5rem);
  // // @include mobile-size-hnav(275px, 275px, 330px, 429px, 0.4rem);
  // @include mobile-size-hnav(250px, 250px, 0px, 429px, 0.3rem);
  @include smartphone {
    width: 100%;
    max-height: 70%;
  }
  ul {
    @include display(100%,flex);
    flex-wrap: wrap;
    justify-content: space-around;
    @include smartphone {
      justify-content: space-between;
    }
  }

  li {
    @include tile($tile-size,$tile-size, $tile-border);
    list-style: none;

    &:not(.photos-group):not(.logo) {
      background-image: url("graphics/menu.jpg");
      background-repeat: no-repeat;
      @include smartphone {
        background-image: none;
        background-color: $tile-bg;
        width: 100%;
        height: 10%;
        border-radius: 0;
        margin-bottom: 5px;
        order: 3;
      }
    }

    &:first-child {
      background-position: 0 0;
    }
    &:nth-child(2){
      background-position: -248px 0;
    }
    &:nth-child(3){
      background-position: -(248px*2) 0;
    }
    &:nth-child(4){
      background-position: 0 -248px;
    }
    &:nth-child(5){
      background-position: -248px -248px;
    }
    &:nth-child(6){
      background-position: -(248px*2) -248px;
    }
    &:nth-child(7){
      background-position: 0 -(248px*2);
    }
    &:nth-child(8){
      background-position: -248px -(248px*2);
    }

    img.logoImg {
      border-radius: 25px;
      width: 100%;
      height: 100%;
      @include smartphone {
        border-radius: 0;
      }
    }

    a {
      @include display(100%,flex);
      border-radius: $tile-border;
      justify-content: center;
      align-items: center;
      text-align: center;
      text-decoration: none;
      font-family: 'Cabin', sans-serif;
      font-size: 2em;
      font-weight: 700;
      color: #000;
      text-transform: uppercase;
      overflow: hidden;
      @include smartphone {
        border-radius: 0;
      }

      &:hover {
        background-color: $tile-bg;
        border: 5px solid rgba(#221D1E, 0.7);
        box-sizing: border-box;
        animation: fade-in 1s;
      }

      &:hover span {
        margin-left: 0px;
        transition: margin-left 0.8s;
      }
    }

    span {
      margin-left: -600px;
      width: 100%;
      @include smartphone {
        margin: 0;
      }
    }

    img.galleryPhoto {
      @include tile(100%,100%, $tile-border);
      display: none;
      animation: fade-in 1s;
      @include smartphone {
        border-radius: 0;
      }

      &:nth-child(1){
        display: flex;
      }
    }
  }

  li.photos-group {
    @include smartphone {
      order: 2;
      width: 100px;
      height: 100px;
    }
  }
  li.logo {
  @include smartphone {
    order: 1;
    width: 100px;
    height: 100px;
    padding-bottom: 5px;
  }
}

}

.open {
  visibility: visible;
  opacity: 1;
}
/* ... */

